fix for connect on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ input[type=submit]:hover {
         width: 15%;
     }
     .connect {
-        width: 93%;
+        width: 90%;
     }
     .about {
         text-align: center;
